[tool.poetry]
name = "pathfinder_network"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <18162779+JohnVonNeumann@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
