[tool.poetry]
name = "pathfinder_network"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <18162779+JohnVonNeumann@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"
flake8 = "^6.0.0"
mypy = "^1.1.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
